grammar.js
    source_file: ($) => repeat($._top_level_item),

    _top_level_item: ($) =>
      choice(
        prec.dynamic(1, $.declaration),
        $.function_definition,
        $._top_level_statement,
        $.attributed_statement,
        $.class_definition,
        $.interface_definition,
        $.mixin_definition,
        $.enum_specifier,
        $.typedef_declaration,
        $.funcdef_declaration,
        $.namespace_definition,
        $.using_declaration,
        $.import_declaration,
        $.virtual_property_declaration
      ),

    _block_item: ($) =>
      choice(
        prec.dynamic(1, $.declaration),
        $.statement,
        $.attributed_statement,
        $.using_declaration
      ),

    class_keyword: (_) => "class",
    void_keyword: (_) => "void",
    bool_keyword: (_) => "bool",
    int_keyword: (_) => "int",
    float_keyword: (_) => "float",
    auto_keyword: (_) => "auto",

    const_keyword: (_) => "const",
    final_keyword: (_) => "final",
    override_keyword: (_) => "override",
    explicit_keyword: (_) => "explicit",
    property_keyword: (_) => "property",
    delete_keyword: (_) => "delete",

    is_operator: (_) => "is",
    not_is_operator: (_) => "!is",
    cast_keyword: (_) => "cast",
    reference_operator: (_) => "&",
    in_keyword: (_) => "in",
    out_keyword: (_) => "out",
    in_out_keyword: (_) => "inout",

    // Simplify operators - remove token() wrapper
    plus_op: (_) => "+",
    sub_op: (_) => "-",
    mul_op: (_) => "*",
    div_op: (_) => "/",
    mod_op: (_) => "%",
    exp_op: (_) => "**",

    not_op: (_) => "!",
    bitnot_op: (_) => "~",
    inc_op: (_) => "++",
    dec_op: (_) => "--",

    lt_op: (_) => "<",
    lte_op: (_) => "<=",
    gt_op: (_) => ">",
    gte_op: (_) => ">=",
    eq_op: (_) => "==",
    neq_op: (_) => "!=",

    andand_op: (_) => "&&",
    oror_op: (_) => "||",
    xorxor_op: (_) => "^^",

    bitand_op: (_) => "&",
    bitor_op: (_) => "|",
    bitxor_op: (_) => "^",
    lsl_op: (_) => "<<",
    lsr_op: (_) => ">>",
    asr_op: (_) => ">>>",

    equal_op: (_) => "=",
    plus_equal_op: (_) => "+=",
    sub_equal_op: (_) => "-=",
    mul_equal_op: (_) => "*=",
    div_equal_op: (_) => "/=",
    mod_equal_op: (_) => "%=",
    exp_equal_op: (_) => "**=",
    bitand_equal_op: (_) => "&=",
    bitor_equal_op: (_) => "|=",
    bitxor_equal_op: (_) => "^=",
    lsl_equal_op: (_) => "<<=",
    lsr_equal_op: (_) => ">>=",
    asr_equal_op: (_) => ">>>=",

    identifier: (_) => /[a-zA-Z_][a-zA-Z0-9_]*/,

    _type_identifier: ($) => alias($.identifier, $.type_identifier),
    _field_identifier: ($) => alias($.identifier, $.field_identifier),
    number_literal: (_) => {
      return token(
        choice(
          // Based numbers (no suffixes allowed)
          /0[xX][0-9a-fA-F]+/,
          /0[bB][01]+/,
          /0[oO][0-7]+/,
          /0[dD][0-9]+/,

          // Floating point patterns (with optional 'f'/'F' suffix)
          seq(
            /[0-9]+/,
            ".",
            /[0-9]+/,
            optional(seq(/[eE]/, optional(/[+-]/), /[0-9]+/)),
            optional(/[fF]/)
          ),

          seq(
            /[0-9]+/,
            ".",
            optional(seq(/[eE]/, optional(/[+-]/), /[0-9]+/)),
            optional(/[fF]/)
          ),

          seq(
            ".",
            /[0-9]+/,
            optional(seq(/[eE]/, optional(/[+-]/), /[0-9]+/)),
            optional(/[fF]/)
          ),

          seq(/[0-9]+/, /[eE]/, optional(/[+-]/), /[0-9]+/, optional(/[fF]/)),

          // Plain integers
          /[0-9]+/
        )
      );
    },

    string_literal: (_) =>
      token(
        choice(
          seq('"', repeat(choice(/[^"\\]/, /\\./)), '"'),
          seq("'", repeat(choice(/[^'\\]/, /\\./)), "'"),
          /"""[\s\S]*?"""/ // Multiline string
        )
      ),

    declaration: ($) =>
      seq(
        optional($.access_specifier),
        field("type", $.type_descriptor),
        commaSep1(
          field("declarator", choice($._init_declarator, $._declarator))
        ),
        ";"
      ),

    _init_declarator: ($) =>
      choice(
        seq(
          field("declarator", $._declarator),
          "=",
          field("value", choice($.initializer_list, $.expression))
        ),
        seq(
          field("declarator", $._declarator),
          field("arguments", $.argument_list)
        )
      ),

    _declarator: ($) =>
      choice(
        $.attributed_declarator,
        $.reference_declarator,
        $.function_declarator,
        $.array_declarator,
        $.parenthesized_declarator,
        $.identifier,
        $.qualified_identifier,
        $.template_function
      ),

    reference_declarator: ($) =>
      prec.dynamic(
        1,
        prec.right(
          seq(
            $.reference_operator,
            optional(choice($.in_keyword, $.out_keyword, $.in_out_keyword)),
            field("declarator", $._declarator)
          )
        )
      ),

    function_declarator: ($) =>
      prec.right(
        1,
        seq(
          field("declarator", $._declarator),
          field("parameters", $.parameter_list),
          optional($.const_keyword),
          field("attributes", repeat($.function_attribute))
        )
      ),

    primitive_type: ($) =>
      choice(
        $.void_keyword,
        $.bool_keyword,
        $.int_keyword,
        $.int8_keyword,
        $.int16_keyword,
        $.int32_keyword,
        $.int64_keyword,
        $.uint_keyword,
        $.uint8_keyword,
        $.uint16_keyword,
        $.uint32_keyword,
        $.uint64_keyword,
        $.float_keyword,
        $.double_keyword
      ),

    auto_type: ($) => $.auto_keyword,

    type_descriptor: ($) =>
      seq(
        optional($.const_keyword),
        field("type", $.type_specifier),
        field("suffixes", repeat(choice($.array_suffix, $.handle_suffix)))
      ),

    handle_suffix: ($) => seq("@", optional($.const_keyword)),

    template_type: ($) =>
      prec(
        1,
        seq(
          field("name", $._type_identifier),
          field("arguments", $.template_argument_list)
        )
      ),

    template_function: ($) =>
      seq(
        field("name", $.identifier),
        field("arguments", $.template_argument_list)
      ),

    template_argument_list: ($) =>
      seq("<", commaSep1($.type_descriptor), alias(token(prec(1, ">")), ">")),

    parameter_list: ($) =>
      seq(
        "(",
        optional(
          choice(
            $.void_keyword,
            commaSep(choice($.parameter_declaration, $.variadic_parameter))
          )
        ),
        ")"
      ),

    parameter_declaration: ($) =>
      seq(
        field("type", $.type_descriptor),
        optional(
          field("declarator", choice($.reference_declarator, $.identifier))
        ),
        optional(seq("=", field("default_value", $.expression)))
      ),

    function_definition: ($) =>
      seq(
        optional($.attribute_specifier),
        field("modifiers", repeat($._shared_external)),
        optional($.access_specifier),
        field("return_type", $.type_descriptor),
        optional($.reference_operator),
        field("declarator", $.function_declarator),
        choice(
          field("body", $.compound_statement),
          seq("=", $.delete_keyword, ";"),
          ";"
        )
      ),

    function_attribute: ($) =>
      choice(
        $.final_keyword,
        $.override_keyword,
        $.delete_keyword,
        $.explicit_keyword,
        $.property_keyword
      ),

    // Simplify class definition with combined attributes
    class_definition: ($) =>
      seq(
        field("attributes", repeat($.class_attributes)),
        $.class_keyword,
        field("name", $._type_identifier),
        choice(
          seq(optional($.base_class_clause), field("body", $.class_body)),
          ";"
        )
      ),

    _shared_external: ($) => choice($.shared_keyword, $.external_keyword),

    class_body: ($) =>
      seq(
        "{",
        repeat(
          choice(
            $.function_definition,
            $.constructor_definition,
            $.destructor_definition,
            $.declaration,
            $.virtual_property_declaration,
            $.funcdef_declaration,
            ";"
          )
        ),
        "}"
      ),

    compound_statement: ($) => seq("{", repeat($._block_item), "}"),

    expression_statement: ($) =>
      seq(optional(choice($.expression, $.comma_expression)), ";"),

    primary_expression: ($) =>
      choice(
        $.identifier,
        $.qualified_identifier,
        $.number_literal,
        $.string_literal,
        $.boolean_literal,
        $.null_literal,
        $.parenthesized_expression,
        $.initializer_list,
        $.lambda_expression,
        $.template_function
      ),

    parenthesized_expression: ($) =>
      seq("(", choice($.expression, $.comma_expression), ")"),

    comma_expression: ($) =>
      seq(
        field("left", $.expression),
        ",",
        field("right", choice($.expression, $.comma_expression))
      ),

    conditional_expression: ($) =>
      prec.right(
        PREC.CONDITIONAL,
        seq(
          field("condition", $.expression),
          "?",
          field("consequence", $.expression),
          ":",
          field("alternative", $.expression)
        )
      ),

    // Rename for clarity
    assignment_expression: ($) =>
      prec.right(
        PREC.ASSIGNMENT,
        seq(
          field("left", $._assignment_left_expression),
          field(
            "operator",
            choice(
              $.equal_op,
              $.plus_equal_op,
              $.sub_equal_op,
              $.mul_equal_op,
              $.div_equal_op,
              $.mod_equal_op,
              $.exp_equal_op,
              $.bitand_equal_op,
              $.bitor_equal_op,
              $.bitxor_equal_op,
              $.lsl_equal_op,
              $.lsr_equal_op,
              $.asr_equal_op
            )
          ),
          field("right", $.expression)
        )
      ),

    _assignment_left_expression: ($) =>
      choice(
        $.identifier,
        $.qualified_identifier,
        $.field_expression,
        $.subscript_expression,
        $.parenthesized_expression,
        $.handle_expression
      ),

    unary_expression: ($) =>
      prec.right(
        PREC.UNARY,
        seq(
          field(
            "operator",
            choice(
              $.not_op,
              $.bitnot_op,
              $.sub_op,
              $.plus_op,
              $.inc_op,
              $.dec_op
            )
          ),
          field("argument", $.expression)
        )
      ),

    postfix_expression: ($) =>
      prec.left(
        PREC.UNARY,
        seq(
          field("argument", $.expression),
          field("operator", choice($.inc_op, $.dec_op))
        )
      ),

    // Consolidated binary expression
    binary_expression: ($) => {
      const table = [
        [$.exp_op, PREC.POWER],
        [$.mul_op, PREC.MULTIPLY],
        [$.div_op, PREC.MULTIPLY],
        [$.mod_op, PREC.MULTIPLY],
        [$.plus_op, PREC.ADD],
        [$.sub_op, PREC.ADD],
        [$.lsl_op, PREC.SHIFT],
        [$.lsr_op, PREC.SHIFT],
        [$.asr_op, PREC.SHIFT],
        [$.lt_op, PREC.RELATIONAL],
        [$.lte_op, PREC.RELATIONAL],
        [$.gt_op, PREC.RELATIONAL],
        [$.gte_op, PREC.RELATIONAL],
        [$.eq_op, PREC.EQUAL],
        [$.neq_op, PREC.EQUAL],
        [$.is_operator, PREC.EQUAL],
        [$.not_is_operator, PREC.EQUAL],
        [$.bitand_op, PREC.BITWISE_AND],
        [$.bitxor_op, PREC.EXCLUSIVE_OR],
        [$.bitor_op, PREC.INCLUSIVE_OR],
        [$.andand_op, PREC.LOGICAL_AND],
        [$.and_operator, PREC.LOGICAL_AND],
        [$.xorxor_op, PREC.LOGICAL_XOR],
        [$.xor_operator, PREC.LOGICAL_XOR],
        [$.oror_op, PREC.LOGICAL_OR],
        [$.or_operator, PREC.LOGICAL_OR],
      ];

      return choice(
        ...table.map(([operator, precedence]) =>
          prec.left(
            precedence,
            seq(
              field("left", $.expression),
              field("operator", operator),
              field("right", $.expression)
            )
          )
        )
      );
    },

    call_expression: ($) =>
      prec(
        PREC.CALL,
        seq(
          field("function", $.expression),
          field("arguments", $.argument_list)
        )
      ),

    field_expression: ($) =>
      prec.left(
        PREC.FIELD,
        seq(
          field("object", $.expression),
          ".",
          field("field", choice($._field_identifier, $.template_method))
        )
      ),

    subscript_expression: ($) =>
      prec(
        PREC.SUBSCRIPT,
        seq(
          field("array", $.expression),
          "[",
          field("index", commaSep1($.argument)),
          "]"
        )
      ),

    cast_expression: ($) =>
      prec(
        PREC.CAST,
        seq(
          $.cast_keyword,
          "<",
          field("type", $.type_descriptor),
          ">",
          "(",
          field("value", $.expression),
          ")"
        )
      ),

    argument_list: ($) => seq("(", commaSep($.argument), ")"),

    argument: ($) =>
      seq(
        optional(seq(field("name", $.identifier), ":")),
        field("value", $.expression)
      ),

    initializer_list: ($) =>
      seq("{", commaSep(choice($.expression, $.initializer_list)), "}"),
